--- a/Changes
+++ b/Changes
@@ -1,2 +1,6 @@
+1.1: Thu Aug  7 15:49:49 EDT 2008
+    - version.pm is incompatible with EU::MM and
+    - removed the Autoloader from the .pm
+
 1.0.0:  Sat Jun  7 19:59:19 EDT 2008
     - finished the pure perl and XS versions
