--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+1.1: Wed Oct 29 08:33:39 EDT 2008
+   - roflmao: I quit using version.pm but left it in the pm
+
 1.1: Thu Aug  7 15:49:49 EDT 2008
     - version.pm is incompatible with EU::MM and
     - removed the Autoloader from the .pm
