--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+1.2: Sun May  3 18:33:49 EDT 2009
+   - doc updates, dist updates, etc
+
 1.1: Wed Oct 29 08:33:39 EDT 2008
    - roflmao: I quit using version.pm but left it in the pm
 
