Import of JETTERO/Object-Previous-1.1010 from CPAN.
gitpan-cpan-distribution: Object-Previous
gitpan-cpan-version:      1.1010
gitpan-cpan-path:         JETTERO/Object-Previous-1.1010.tar.gz
gitpan-cpan-author:       JETTERO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+1.1010: Wed Jul 08 2009
+   - Doc bugs (very indirectly) found by Hans Dieter Pearcey
+
 1.2: Sun May  3 18:33:49 EDT 2009
    - doc updates, dist updates, etc
 
