--- a/Previous.pod
+++ b/Previous.pod
@@ -54,26 +54,25 @@ work.  Curiously, certain ways of tinkering don't hurt and others do.
     unshift @_, "borked"; # breaks previous_object();
     @_ = ();              # breaks previous_object();
 
-Another caveat is that almost everyone things this is a really bad idea and/or
+Another caveat is that almost everyone thinks this is a really bad idea and/or
 bad practice.  
 
 The only place I've ever seen it actually used in practice is for security in
-MudOS (LPC, not perl).  LPC has a native previous_object function.  It's used to
+MudOS (LPC, not Perl).  LPC has a native previous_object function.  It's used to
 make sure calling objects are really admin-shells or really the mob they're
 supposed to be -- anywhere you wouldn't want someone to just be able to pass in
 an appropriate object to subvert the security.
 
 =head1 AUTHOR(S)
 
-Most of the code was ripped from Perl and from
-L<perlmonks|http://perlmonks.org>, but it was glued together by me.
+Most of the code was ripped from Perl and from L<http://perlmonks.org/>, but it
+was glued together by me.
 
 Paul Miller C<< <paul@cpan.org> >>
 
-I am using this software in my own projects...  If you find bugs,
-please please please let me know. :) Actually, let me know if you
-find it handy at all.  Half the fun of releasing this stuff is
-knowing that people use it.
+I am using this software in my own projects...  If you find bugs, please please
+please let me know. :) Actually, let me know if you find it handy at all.  Half
+the fun of releasing this stuff is knowing that people use it.
 
 =head1 COPYRIGHT
 
@@ -83,7 +82,5 @@ Licensed under the same terms as Perl itself.
 
 =head1 SEE ALSO
 
-perl(1), L<Devel::Stacktrace>,
-L<perlmonks node 690713|http://perlmonks.org/?node_id=690713>,
-L<perlmonks node 690795|http://perlmonks.org/?node_id=690795>,
-cop.h, pp_ctl.c
+perl(1), L<Devel::Stacktrace>, L<http://perlmonks.org/?node_id=690713>,
+L<http://perlmonks.org/?node_id=690795>, cop.h, pp_ctl.c
